kpa-grep (0.13) unstable; urgency=medium

  * Add --print0 support to --dump-tags (closes github #16.)
  * Add more tests for --dump-tags --since.

 -- Mark W. Eichin <eichin@thok.org>  Sun, 15 Sep 2024 02:05:26 -0400

kpa-grep (0.12) unstable; urgency=medium

  * Add man page (using ronn) (closes github#6.)

 -- Mark W. Eichin <eichin@thok.org>  Sat, 14 Sep 2024 23:13:35 -0400

kpa-grep (0.11) unstable; urgency=medium

  * Add basic cram tests (closes github#7.)
    * Use jq to validate --json output.
    * Use xmllint and xq to validate --xml output.
    * Use xargs to validate --print0 output.
    * Exact-match test --markdown output.
  * Handle kphotoalbumrc not having a configfile setting (closes github#11.)

 -- Mark W. Eichin <eichin@thok.org>  Sat, 14 Sep 2024 18:09:39 -0400

kpa-grep (0.10) unstable; urgency=medium

  * Per
    https://docs.python.org/3.12/library/xml.etree.elementtree.html#module-xml.etree.ElementTree,
    cElementTree is deprecated since since version 3.3 (ElementTree itself
    "will use a fast implementation whenever available" and quick testing
    shows that the performance matches.)
  * Set encoding to "unicode" to get a string instead of bytes for the
    output. (closes github#9.)

 -- Mark W. Eichin <eichin@thok.org>  Fri, 23 Aug 2024 13:55:17 -0400

kpa-grep (0.09) unstable; urgency=medium

  * Broaden --path to strip off the prefix of paths that the index is in.
    This allows the output of kpa-grep (without --relative) to be used
    directly with kpa-grep --path; specifically, if you're looping over
    kpa-grep output to get explicit image file names to copy, you can then
    pass them into kpa-grep --json or kpa-grep --markdown to get the
    metadata without needing to handle the index path directly.

 -- Mark W. Eichin <eichin@thok.org>  Fri, 23 Aug 2024 13:20:08 -0400

kpa-grep (0.08) unstable; urgency=medium

  * Added --markdown (like --json and --xml.)  Entirely ad-hoc, just